// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have only high contrast styles for p-button 1`] = `
[
  {
    "@media(hover:hover)": {
      ".root:hover": {
        "border-color": "Highlight",
      },
    },
  },
]
`;

exports[`should have only high contrast styles for p-carousel 1`] = `
[
  {
    ".bullet": {
      "background": "CanvasText",
    },
    ".bullet--active": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-divider 1`] = `
[
  {
    "hr": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-link 1`] = `
[
  {
    "@media(hover:hover)": {
      ".root:hover": {
        "border-color": "Highlight",
      },
    },
  },
  {
    ".root": {
      "border-color": "LinkText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-link-social 1`] = `
[
  {
    "@media(hover:hover)": {
      ".root:hover": {
        "border-color": "Highlight",
      },
    },
  },
  {
    ".root": {
      "border-color": "LinkText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-multi-select-option 1`] = `
[
  {
    ".option--highlighted, .option--selected": {
      "color": "Highlight",
    },
    "@media(hover:hover)": {
      ".option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover": {
        "color": "Highlight",
      },
    },
  },
]
`;

exports[`should have only high contrast styles for p-popover 1`] = `
[
  {
    "button:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-scroller 1`] = `
[
  {
    ".scroll-wrapper:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-segmented-control-item 1`] = `
[
  {
    "button:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-select-option 1`] = `
[
  {
    ".option--highlighted, .option--selected": {
      "color": "Highlight",
    },
    "@media(hover:hover)": {
      ".option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover": {
        "color": "Highlight",
      },
    },
  },
]
`;

exports[`should have only high contrast styles for p-spinner 1`] = `
[
  {
    "circle:last-child": {
      "stroke": "Canvas",
    },
  },
  {
    "circle:first-child": {
      "stroke": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-switch 1`] = `
[
  {
    ".toggle": {
      "background-color": "CanvasText",
    },
    "@media(hover:hover)": {
      ".root:hover .switch .toggle": {
        "background-color": "CanvasText",
      },
    },
  },
]
`;

exports[`should have only high contrast styles for p-tabs-bar 1`] = `
[
  {
    ".bar": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-wordmark 1`] = `
[
  {
    "svg": {
      "fill": "CanvasText",
    },
  },
]
`;
